Implement add project